--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Clement Jean
+name: Clément Jean
 
 # Short bio or description (displayed in the header)
 description: Eternal learner and challenges lover
