--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: Clement-Jean/
   instagram:
-  linkedin: https://www.linkedin.com/in/clément-jean-a08701a4
+  linkedin: clément-jean-a08701a4
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
