--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Clément Jean
 description: Eternal learner and challenges lover
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/一介学生.png
+avatar: https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/一介好学.png
 
 #
 # Flags below are optional
