--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ avatar: https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/ma
 footer-links:
   dribbble:
   email: clement.jean@epitech.eu
-  facebook:
+  facebook: clement.jean.927
   flickr:
   github: Clement-Jean/
   instagram:
