--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: channel/UCgh1ZH7wECtTejZuVx0dtQQ # channel/<your_long_string> or user/<user-name>
+  youtube: #channel/UCgh1ZH7wECtTejZuVx0dtQQ 
   googleplus: # anything in your profile username that comes after plus.google.com/
 
 
