update contact info

--- a/_config.yml
+++ b/_config.yml
@@ -19,15 +19,15 @@ avatar: https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/ma
 footer-links:
   dribbble:
   email: clement.jean@epitech.eu
-  facebook: clement.jean.927
+  facebook:
   flickr:
   github: Clement-Jean/
   instagram:
-  linkedin: clément-jean-a08701a4
+  linkedin: clement-jean
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: 
-  stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
+  stackoverflow: users/11269045/clément-jean
   youtube: #channel/UCgh1ZH7wECtTejZuVx0dtQQ 
   googleplus: # anything in your profile username that comes after plus.google.com/
 
