--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@
 
 # Name of your site (displayed in the header)
 name: Clément Jean
+author: Clément Jean
 
 # Short bio or description (displayed in the header)
 description: Eternal learner and challenges lover
@@ -24,7 +25,7 @@ footer-links:
   instagram:
   linkedin: clement-jean
   pinterest:
-  rss: # just type anything here for a working RSS icon
+  rss: anything
   twitter: 
   stackoverflow: users/11269045/clément-jean
   youtube: #channel/UCgh1ZH7wECtTejZuVx0dtQQ 
