--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@ description: Eternal learner and challenges lover
 avatar: https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/%E4%B8%80%E4%BB%8B%E5%A5%BD%E5%AD%A6.png
 footer-links:
   email: clement.jean@epitech.eu
-  github: Clement-Jean/
+  github: Clement-Jean
   linkedin: clement-jean
-  pinterest:
   rss: anything
   twitter: ClmentJean1
   stackoverflow: users/11269045/clément-jean
