--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Clément Jean
 author: Clément Jean
 description: Eternal learner and challenges lover
-avatar: https://raw.githubusercontent.com/Clement-Jean/clement-jean.github.io/master/images/%E4%B8%80%E4%BB%8B%E5%A5%BD%E5%AD%A6.png
+avatar: /images/%E4%B8%80%E4%BB%8B%E5%A5%BD%E5%AD%A6.png
 footer-links:
   email: clement.jean@epitech.eu
   github: Clement-Jean
